<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SchemeDescriptionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="#4285FA">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
            android:id="@+id/desc_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="23sp"
            tools:text="Heading"
            android:textColor="#FFFFFF"

            />

            <ImageView
                android:id="@+id/heading_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_speaker_24"
                android:layout_alignParentRight="true"/>

            <ImageView
                android:id="@+id/heading_speak_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_delete_26"
                android:visibility="gone"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

    </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brief"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"

                />

            <TextView
                android:id="@+id/desc_brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eligibility"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                />


            <TextView
                android:id="@+id/desc_eligibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benefits"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                />


            <TextView
                android:id="@+id/desc_benefits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
            />

        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                />

            <TextView
                android:id="@+id/desc_apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"
                />
            <TextView
                android:id="@+id/desc_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                />


        </LinearLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
</RelativeLayout>